--- a/client/assets/css/app.scss
+++ b/client/assets/css/app.scss
@@ -1,30 +1,43 @@
-@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700i');
+//@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700i');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=latin-ext');
+@import 'ng-material/app.toolbar';
 
 html, body{
   height: 100%;
+  overflow: hidden;
   // font-family: Arial, Helvetica, sans-serif
   // font-family: 'Anonymous Pro', monospace;
 }
 
-// Expanding the navbar adds 49 pixels to the base toolbar's 64px.
-// TODO: Responsively resize toolbar and navbar
-main {
-  padding-bottom: 50px;
+.screen-container {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
-.right-button-panel, main {
-  &.without-navbar {
-    padding-top: 72px;
-  }
-  &.with-navbar {
-    padding-top: 121px;
-  }
+.scroll-container {
+  display: inline-flex;
+  flex-flow: column nowrap;
+  height: 100vh;
+  // width: 49vw;
+  overflow-y: hidden
 }
 
-.right-button-panel {
-  position: fixed;
-  right: 0px;
-  z-index: 10;
+.scrollable {
+  display: block;
+  height: 100vh;
+  flex: 1 1 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.side-panel-container {
+  width: 300px;
+}
+
+.main-panel-container {
+  width: 100%;
 }
 
 footer {
@@ -46,16 +59,3 @@ md-dialog-actions {
   }
 }
 
-/*
-span.active {
-  background-color: gray;
-}
-
-span.flex-fill {
-  flex: 1 1 auto;
-}
-
-.modal-title {
-  flex: 80% 1 auto
-}
-*/
