--- a/client/assets/css/ng-material/_app.toolbar.scss
+++ b/client/assets/css/ng-material/_app.toolbar.scss
@@ -1,48 +1,66 @@
 @import '~@angular/material/toolbar/toolbar';
+//@import 'app.media';
 
-$md-toolbar-height-desktop: 64px;
-$md-toolbar-height-mobile-portrait: 56px;
-$md-toolbar-height-mobile-landscape: 48px;
+$mat-toolbar-height-desktop: 66px;
+$mat-toolbar-height-mobile-portrait: 58px;
+$mat-toolbar-height-mobile-landscape: 50px;
 
-@mixin md-toolbar-spacers($height) {
+
+@mixin mat-toolbar-spacers($height) {
   .toolbar-spacer {
-    height: $height;
-    display: inline-block;
-    flex: none;
+    display: block;
+    flex: 0 1 $height;
   }
 
   .navbar-spacer {
-    height: $height + 50px;
-    display: inline-block;
-    flex: none;
+    display: block;
+    flex: 0 1 $height + 50px;
   }
 
   .toolbar-scrollable {
-    display: inline-block;
-    flex: none;
-    height: 100vh;
+    display: block;
+    flex: 0 1 100%;
     padding-top: $height;
     padding-bottom: 32px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow-y: visible;
+    overflow-x: auto;
   }
 
   .navbar-scrollable {
-    display: inline-block;
-    flex: none;
-    height: 100vw;
+    display: block;
+    flex: 0 1 100%;
+    //height: 100vh;
     padding-top: $height + 50px;
     padding-bottom: 32px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow-y: visible;
+    overflow-x: auto;
   }
 
-  .absolute-top {
-    position: fixed;
-    top: $height;
-    right: 0;
-    left: 0;
+  .toolbar-top {
+    @extend %absolute-fixed-#{$phName};
+    top: 0;
+    height: $height;
     z-index: 1030;
+  }
+
+  .navbar-top {
+    @extend %absolute-fixed-#{$phName};
+    top: $height;
+    z-index: 30;
+  }
+
+  .side-panel-container {
+    @extend %scroll-container-#{$phName};
+    padding-top: $height;
+    padding-bottom: 32px;
+    width: 300px;
+  }
+
+  .main-panel-container {
+    @extend %scroll-container-#{$phName};
+    padding-top: $height + 50px;
+    padding-bottom: 32px;
+    width: 100vw;
   }
 
   .right-button-panel {
@@ -54,21 +72,109 @@ $md-toolbar-height-mobile-landscape: 48px;
   }
 }
 
-.footer-spacer {
-  height: 32px;
-  display: inline-block;
-  flex: none;
+%absolute-fixed-desktop {
+  position: absolute;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+%scroll-container-desktop {
+  display: flex;
+  flex-flow: column nowrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 // Set the default height for the toolbar.
-@include md-toolbar-spacers($md-toolbar-height-desktop);
+$phName: "desktop";
+@include mat-toolbar-spacers($mat-toolbar-height-desktop);
 
 // Specific height for mobile devices in portrait mode.
-@media ($md-xsmall) and (orientation: portrait) {
-  @include md-toolbar-spacers($md-toolbar-height-mobile-portrait);
+$phName: "portrait";
+@media ($mat-xsmall) and (orientation: portrait) {
+  %absolute-fixed-portrait {
+    position: absolute;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    right: 0;
+    left: 0;
+  }
+
+  %scroll-container-portrait {
+    display: flex;
+    flex-flow: column nowrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+
+  @include mat-toolbar-spacers($mat-toolbar-height-mobile-portrait);
 }
 
 // Specific height for mobile devices in landscape mode.
-@media ($md-small) and (orientation: landscape) {
-  @include md-toolbar-spacers($md-toolbar-height-mobile-landscape);
+$phName: "landscape";
+@media ($mat-small) and (orientation: landscape) {
+  %absolute-fixed-landscape {
+    position: absolute;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    right: 0;
+    left: 0;
+  }
+
+  %scroll-container-landscape {
+    display: flex;
+    flex-flow: column nowrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+
+  @include mat-toolbar-spacers($mat-toolbar-height-mobile-landscape);
 }
+
+.screen-container {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.scroll-container {
+  @extend %scroll-container-desktop
+}
+
+%scrollable {
+  display: block;
+  flex: 0 1 100vh;
+  overflow-y: auto;
+  overflow-x: visible;
+}
+
+pool-list {
+  @extend %scroll-container-desktop
+}
+
+scroll-main{
+  @extend %scrollable
+}
+
+div.scrollable, .scrollable {
+  @extend %scrollable
+}
+
+footer {
+  position: absolute;
+  height: 32px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: #f0f0f0;
+}
+
