--- a/client/assets/css/ng-material/_app.toolbar.scss
+++ b/client/assets/css/ng-material/_app.toolbar.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/toolbar/toolbar';
+///@import '~@angular/material/toolbar/toolbar';
 //@import 'app.media';
 
 $mat-toolbar-height-desktop: 66px;
