--- a/client/assets/css/app.scss
+++ b/client/assets/css/app.scss
@@ -1,5 +1,6 @@
 //@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700i');
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=latin-ext');
+@import "ng-material/app.media";
 @import "ng-material/app.toolbar";
 
 html, body {
