--- a/client/assets/css/ng-material/_app.palette.scss
+++ b/client/assets/css/ng-material/_app.palette.scss
@@ -21,18 +21,18 @@ $light-warn:    $warn;
   @include mat-autocomplete-theme($themeOne);
   @include mat-button-theme($themeOne);
   @include mat-button-toggle-theme($themeOne);
-  @include mat-card-theme($themeOne);
+  @include mat-card-theme($themeTwo);
   @include mat-checkbox-theme($themeOne);
-  @include mat-chips-theme($themeOne);
-  @include mat-table-theme($themeTwo);
+  @include mat-chips-theme($themeTwo);
+  @include mat-table-theme($themeOne);
   @include mat-datepicker-theme($themeOne);
   @include mat-dialog-theme($themeOne);
-  @include mat-expansion-panel-theme($themeOne);
+  @include mat-expansion-panel-theme($themeTwo);
   @include mat-grid-list-theme($themeOne);
   @include mat-icon-theme($themeOne);
-  @include mat-input-theme($themeOne);
+  @include mat-input-theme($themeTwo);
   @include mat-list-theme($themeOne);
-  @include mat-menu-theme($themeOne);
+  @include mat-menu-theme($themeTwo);
   @include mat-paginator-theme($themeTwo);
   @include mat-progress-bar-theme($themeOne);
   @include mat-progress-spinner-theme($themeOne);
@@ -42,7 +42,7 @@ $light-warn:    $warn;
   @include mat-slide-toggle-theme($themeOne);
   @include mat-slider-theme($themeOne);
   @include mat-tabs-theme($themeTwo);
-  @include mat-toolbar-theme($themeTwo);
-  @include mat-tooltip-theme($themeOne);
+  @include mat-toolbar-theme($themeOne);
+  @include mat-tooltip-theme($themeTwo);
   @include mat-simple-snack-bar-theme($themeOne);
 }
