--- a/client/app/+home/_home-sidenav.component.html
+++ b/client/app/+home/_home-sidenav.component.html
@@ -20,11 +20,11 @@
       <section>
         <md-input-container>
           <md-placeholder>Submit Local State to App State</md-placeholder>
-          <input md-input name="eventTextInput" [value]="localState.value" (input)="localState.value = $event.target.value"
+          <input mdInput name="eventTextInput" [value]="localState.value" (input)="localState.value = $event.target.value"
                     autofocus>
         </md-input-container>
         <md-input-container>
-          <input md-input type="text" name="ngTextInput" [(ngModel)]="localState.value" autofocus>
+          <input mdInput type="text" name="ngTextInput" [(ngModel)]="localState.value" autofocus>
         </md-input-container>
       </section>
 
